# InfiniGen

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
binary/: build.sh  build_gpu.sh  build_mlu.sh  test.h  test.out  test_gpu.cpp  test_gpu_new.cpp  test_mlu.cpp  test_mlu_new.cpp
code/: test.cu  test.mlu
docs/: 01_Outline_Design.md  02_For_Developer.md
include/core/: api.h  attribute.h  cache.h  graph.h  kernel.h  log.h  micro.h  operator.h  platform.h  split.h  task.h  tensor.h  tile.h  type.h  utils.h  worker.h
include/graphs/: binary_unary_graph.h  gemm_graph.h
include/kernels/: binary.h  memory.h
include/micros/: binary_micro.h  memory_micro.h  sync_micro.h  unary_micro.h
include/operators/: elementwise.h  gemm.h
source/core/: attribute.cpp  cache.cpp  graph.cpp  kernel.cpp  log.cpp  micro.cpp  operator.cpp  platform.cpp  split.cpp  task.cpp  tensor.cpp  tile.cpp  utils.cpp  worker.cpp
source/graphs/: binary_unary_graph.cpp  gemm_graph.cpp
source/kernels/: binary.cpp  memory.cpp
source/micros/: binary_micro.cpp  memory_micro.cpp  sync_micro.cpp
source/operators/: gemm.cpp  (+1 more)
test/: check_binary_cuda.cpp  check_unary_bang.cpp  check_unary_cuda.cpp  test_cache.cpp  test_gemm.cpp  test_graph.cpp  test_graph_new.cpp  test_main.cpp  test_memory.cpp  test_operator.cpp  test_platform.cpp  test_split.cpp  test_unary.cpp  test_utils.cpp  test_worker.cpp  test_workflow.cpp
tests/: check_binary_bang.cpp  check_gemm_cuda.cpp  test_binary.cpp  test_cache.cpp  test_gemm.cpp  test_graph_new.cpp  test_platform.cpp  tests.h
tools/: format
(+21 files in other folders)
